Password should be None, not empty string.

--- a/testing/config.py.tmpl
+++ b/testing/config.py.tmpl
@@ -18,7 +18,7 @@ file_url = "file:///home/ken/testdup"
 file_password = None
 
 ftp_url = "ftp://ken@xyzzyx/testdup"
-ftp_password = ""
+ftp_password = None
 
 # /etc/rsyncd.conf contains
 # [testdup]
