Add tests for webdav and webdavs.

--- a/testing/config.py.tmpl
+++ b/testing/config.py.tmpl
@@ -40,6 +40,11 @@ s3_url = "s3+http://testdup/test"
 s3_access_key = ""
 s3_secret_key = ""
 
+webdav_url = "webdav://ken@xyzzyx/testdup"
+webdav_password = ""
+
+webdavs_url = "webdavs://ken@xyzzyx/testdup"
+webdavs_password = ""
 
 def setup():
    	""" setup for unit tests """
