patch #6700: Make duplicity translatable https://savannah.nongnu.org/patch/?6700 [not in patch - added after unit tests]

--- a/testing/config.py.tmpl
+++ b/testing/config.py.tmpl
@@ -2,6 +2,9 @@ import sys, os
 sys.path.insert(0, "../")
 from duplicity import globals, log
 
+import gettext
+gettext.install('duplicity')
+
 # config for duplicity unit tests
 
 # to test GPG and friends
