* fix test config to import backends (now optional).

--- a/testing/config.py.tmpl
+++ b/testing/config.py.tmpl
@@ -87,6 +87,8 @@ def setup():
 
     globals.num_retries = 2
 
+    backend.import_backends()
+
     set_environ("FTP_PASSWORD", None)
     set_environ("PASSPHRASE", None)
     if s3_access_key:
